# exchange-mail-mcp

./: .gitignore  AGENTS.md  auth.py  config.py  pyproject.toml  server.py
