[project]
name = "exchange-mail-mcp"
version = "0.1.0"
description = "MCP server for Microsoft 365 Exchange mail via Graph API"
requires-python = ">=3.10"
dependencies = [
    "msal",
    "requests",
    "mcp[cli]",
]

[project.scripts]
exchange-mail-mcp = "server:mcp.run"
exchange-mail-auth = "auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "auth.py"]
